2003-07-11  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/socket.cxx (socket): If there are no network stacks configured
	return EAFNOSUPPORT when opening a socket.

2003-04-11  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/socket.cxx: Give nstab_lock mutex a priority. Also it's
	local, so make static.
	Change nstab and nstab_end to cyg_nstab and cyg_nstab_end for
	cleaner namespace.
	* include/sockio.h: nstab -> cyg_nstab.
	* src/misc.cxx, src/dir.cxx, src/fio.h, src/file.cxx: Change
	fstab, fstab_end, mtab, mtab_end, cdir_dir, cdir_mtab_entry to
	have cyg_ prefix for cleaner namespace.

2003-03-20  Gary Thomas  <gary@mlbassoc.com>

	* src/devfs.cxx: Remove unnecessary checks for -EAGAIN (should
	no longer happen in lower layers).

2003-03-08  Jonathan Larmour  <jifl@eCosCentric.com>

	* tests/pselect.c (pthread_entry1): Allow for infrequent but
	occasional off by one error due to race condition when
	signalling.

2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/fileio.cdl: Add doc link.

2003-02-20  Bart Veer  <bartv@ecoscentric.com>

	* cdl/fileio.cdl: identify test binaries, not test sources

2003-01-30  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/fileio.cdl: Added interface CYGINT_IO_FILEIO_FS which any
	FS which FILEIO can use should implement. 

2003-01-23  Gary Thomas  <gary@mlbassoc.com>

	* src/misc.cxx (cyg_mtab_lookup): Return an error if the current
	directory is not known - happens if no file systems are mounted.

2002-11-10  Nick Garnett  <nickg@ecoscentric.com>

	* src/fio.h: Added macros to deal with signal handling. These will
	call into the POSIX package if it is present, but are null if it
	is not.

	* src/select.cxx: Renamed original select() to cyg_pselect() and
	added select() and pselect() routine from POSIX-200X to call
	it. Reorganized code a little and added calls to macros to deal
	with signal delivery and detection.

	* cdl/fileio.cdl: 
	* tests/pselect.c: New test added to verify the signal masking and